--- a/levelSolver/package.json
+++ b/levelSolver/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "start": "nodemon ./src/server.js",
+    "babel-node": "babel-node ./src/server.js",
+    "start": "nodemon --exec yarn babel-node --",
     "lint": "eslint --ext js src"
   },
   "author": "",
@@ -13,12 +14,14 @@
   "dependencies": {
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "gravnic-game": "git+ssh://git@github.com:christopherpole/gravnic-game#master",
     "mongoose": "^5.1.4",
     "morgan": "^1.9.0",
-    "winston": "^2.4.2",
-    "gravnic-game": "git+ssh://git@github.com:christopherpole/gravnic-game#master"
+    "winston": "^2.4.2"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-prettier": "^2.9.0",
