--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     depends_on:
       backend:
         condition: service_healthy
-      levelSolver:
+      level_solver:
         condition: service_healthy
     environment:
       - REACT_APP_BACKEND_ENDPOINT=http://backend:4000
@@ -40,7 +40,7 @@ services:
       timeout: 5s
       retries: 15
 
-  levelSolver: 
+  level_solver: 
     build: ./levelSolver
     working_dir: /levelSolver
     ports:
