--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     depends_on:
       backend:
         condition: service_healthy
-      level_solver:
+      levelsolver:
         condition: service_healthy
     environment:
       - REACT_APP_BACKEND_ENDPOINT=http://backend:4000
@@ -40,7 +40,7 @@ services:
       timeout: 5s
       retries: 15
 
-  level_solver: 
+  levelsolver: 
     build: ./levelSolver
     working_dir: /levelSolver
     ports:
@@ -49,7 +49,7 @@ services:
       - ./levelSolver:/levelSolver
     env_file: ./levelSolver/.env
     healthcheck:
-      test: "curl -f http://levelSolver:4000/solveLevel"
+      test: "curl -f http://levelsolver:5000/solveLevel/[]"
       interval: 10s
       timeout: 5s
       retries: 15
