--- a/backend/.eslintrc
+++ b/backend/.eslintrc
@@ -12,7 +12,7 @@
     "window": true
   },
   "rules": {
-    "prettier/prettier": "error",
+    "prettier/prettier": 1,
     "import/no-named-as-default": 0,
     "function-paren-newline": 0,
     "import/no-unresolved": 0,
