--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,9 @@
   "private": true,
   "main": "app.js",
   "scripts": {
+    "start": "node ./src/server.js",
+    "dev": "nodemon ./src/server.js",
     "test": "jest",
-    "start": "nodemon ./src/server.js",
     "lint": "eslint --ext js src"
   },
   "author": "",
