--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,11 +4,16 @@
     "private": true,
     "dependencies": {
         "axios": "^0.18.0",
+        "babel-preset-es2015": "^6.24.1",
+        "babel-register": "^6.26.0",
         "bluebird": "^3.5.1",
         "body-parser": "^1.18.2",
         "deep-equal": "^1.0.1",
+        "dotenv": "^6.0.0",
+        "express": "^4.16.3",
         "global": "^4.3.2",
         "gravnic-game": "git+ssh://git@github.com:christopherpole/gravnic-game#master",
+        "ignore-styles": "^5.0.1",
         "isomorphic-fetch": "^2.2.1",
         "lodash": "^4.17.5",
         "normalize.css": "^8.0.0",
@@ -28,10 +33,12 @@
         "reselect": "^3.0.1",
         "shortid": "^2.2.8",
         "sortablejs": "1.6.1",
-        "styled-components": "^3.1.6"
+        "styled-components": "^3.1.6",
+        "winston": "^3.0.0"
     },
     "scripts": {
-        "start": "react-scripts start",
+        "start": "NODE_PATH=src node server/index.js",
+        "dev": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test --env=jsdom",
         "eject": "react-scripts eject",
@@ -39,7 +46,7 @@
     },
     "devDependencies": {
         "babel-jest": "^22.4.3",
-        "babel-preset-react-app": "^3.1.1",
+        "babel-preset-react-app": "^3.1.2",
         "enzyme": "^3.3.0",
         "enzyme-adapter-react-16": "^1.1.1",
         "enzyme-to-json": "^3.3.1",
