--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
         condition: service_healthy
     environment:
       - REACT_APP_BACKEND_ENDPOINT=http://backend:4000
+      - REACT_APP_LEVEL_SOLVER_ENDPOINT=http://levelsolver:5000
     env_file: ./frontend/.env
     healthcheck:
       test: "curl -f http://frontend:3000"
