--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,6 @@
-REACT_APP_BACKEND_ENDPOINT=http://localhost:4000
-REACT_APP_LEVEL_SOLVER_ENDPOINT=http://localhost:5000
+REACT_APP_BACKEND_ENDPOINT=http://frontend:3000 
+REACT_APP_LEVEL_SOLVER_ENDPOINT=http://frontend:3000
+SERVER_BACKEND_ENDPOINT=http://backend:4000
+SERVER_LEVEL_SOLVER_ENDPOINT=http://levelsolver:5000
 PORT=3000
 NODE_PATH=src
