--- a/e2e/package.json
+++ b/e2e/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.test.js",
   "scripts": {
-    "test": "jest --runInBand",
+    "test": "jest --runInBand -b",
     "lint": "eslint --ext js __tests__"
   },
   "author": "",
