--- a/levelSolver/package.json
+++ b/levelSolver/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
-    "gravnic-game": "git+ssh://git@github.com:christopherpole/gravnic-game#master",
+    "gravnic-game": "^2.0.2",
     "mongoose": "^5.1.4",
     "morgan": "^1.9.0",
     "winston": "^2.4.2"
