--- a/frontend/.env
+++ b/frontend/.env
@@ -1,5 +1,5 @@
-REACT_APP_BACKEND_ENDPOINT=http://localhost:4000
-REACT_APP_LEVEL_SOLVER_ENDPOINT=http://localhost:5000
+REACT_APP_BACKEND_ENDPOINT=
+REACT_APP_LEVEL_SOLVER_ENDPOINT=
 SERVER_BACKEND_ENDPOINT=http://localhost:4000
 SERVER_LEVEL_SOLVER_ENDPOINT=http://localhost:5000
 PORT=3000
