--- a/levelSolver/package.json
+++ b/levelSolver/package.json
@@ -19,6 +19,10 @@
     "morgan": "^1.9.0",
     "winston": "^2.4.2"
   },
+  "jest": {
+    "verbose": true,
+    "testURL": "http://localhost/"
+  },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
