--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "winston": "^2.4.1"
   },
   "devDependencies": {
+    "coveralls": "^3.0.2",
     "eslint": "^4.18.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-prettier": "^2.9.0",
