--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,6 +48,7 @@
   "devDependencies": {
     "babel-jest": "^22.4.3",
     "babel-preset-react-app": "^3.1.2",
+    "coveralls": "^3.0.2",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.1",
